fix category, add customer api
