# src/controllers/category.controller.ts
@@ -1,25 +1,26 @@
+import { CategoryDto } from '@/dtos/category.dto';
 import { HttpException } from '@/exceptions/HttpException';
 import { CategoryService } from '@/services/category.service';
 import { NextFunction, Request, Response } from 'express';
 
 export class CategoryController {
-  private categoryService: CategoryService;
+  private CategoryService: CategoryService;
   constructor() {
-    this.categoryService = new CategoryService();
+    this.CategoryService = new CategoryService();
   }
   public async Category(req: Request, res: Response, next: NextFunction) {
-    const { name } = req.body;
+    const name:CategoryDto  = req.body;
     try {
-      const category = await this.categoryService.createCategory(name);
+      const category = await this.CategoryService.createCategory(name)
       res.status(201).json({ data: category, message: 'category created successfully', status: 201 });
     } catch (error) {
       next(new HttpException(500, error.message || 'Something went wrong'));
     }
-  }
+}
   public async getCategories(req: Request, res: Response, next: NextFunction) {
     const { query }: any = req;
     try {
-      const categories = await this.categoryService.findCategory(query);
+      const categories = await this.CategoryService.findCategory(query);
       if (categories) {
         res.status(200).json({ data: categories, message: 'categories fetched successfully', status: 200 });
       } else {
@@ -32,7 +33,7 @@ export class CategoryController {
   public async getCategoryById(req: Request, res: Response, next: NextFunction) {
     const { id } = req.params;
     try {
-      const category = await this.categoryService.findCategoryById(id);
+      const category = await this.CategoryService.findCategoryById(id);
       if (category) {
         res.status(200).json({ data: category, message: 'category fetched successfully', status: 200 });
       } else {
@@ -44,9 +45,9 @@ export class CategoryController {
   }
   public async updateCategoryById(req: Request, res: Response, next: NextFunction) {
     const { id } = req.params;
-    const { name } = req.body;
+    const name  = req.body;
     try {
-      const category = await this.categoryService.updateCategory(id, name);
+      const category = await this.CategoryService.updateCategory(id, name);
       if (category) {
         res.status(200).json({ data: category, message: 'category fetched successfully', status: 200 });
       } else {
@@ -59,7 +60,7 @@ export class CategoryController {
   public async deleteCategory(req: Request, res: Response, next: NextFunction) {
     const { id } = req.params;
     try {
-      const category = await this.categoryService.deleteCategory(id);
+      const category = await this.CategoryService.deleteCategory(id);
       res.status(200).json({ data: category, message: 'category deleted successfully', status: 200 });
     } catch (error) {
       next(new HttpException(500, error.message || 'Something went wrong'));
